--- a/DECA_4.qsf
+++ b/DECA_4.qsf
@@ -74,4 +74,6 @@ set_global_assignment -name VERILOG_FILE PCHelper.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name BDF_FILE control_path.bdf
+set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform7.vwf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
